app/buck2_query_derive/tests/ui/fn.stderr
error: `#[query_module(..)]` can only be used on impls
  --> tests/ui/fn.rs:13:1
   |
13 | fn foo(env: ()) {}
   | ^^^^^^^^^^^^^^^^^^
